examples/errors/stack_underflow.aaa
fn
    main
begin
    drop
end
